[metadata]
description-file = README.md

[flake8]
ignore = E203
max-line-length = 120
max-complexity = 10
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .tox

[mypy]
python_version = 3.7
ignore_missing_imports = True
#follow_imports=silent
incremental = True

[isort]
line_length=90
length_sort=True
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
no_lines_before=FIRSTPARTY
skip=docs/conf.py
skip_glob=.tox,.eggs,build
not_skip=__init__.py
